Initial commit with Docker and CI/CD configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.1.1
+gunicorn==21.2.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -16,8 +17,6 @@ MarkupSafe==3.0.2
 mutagen==1.47.0
 Pygments==2.18.0
 pymdown-extensions==10.13
-PyMySQL==1.1.0
-PyYAML==6.0.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.0.1
